2007-11-14  Neal H. Walfield  <neal@gnu.org>

	* btree.h: Include <stddef.h>.
	(BTREE_CLASS): Cast the return of the insert template
	appropriately.

2007-11-05  Neal H. Walfield  <neal@gnu.org>

	* btree.h (insert): Don't return an error code.  Return the node
	with the overlapping key.
	(BTREE_CLASS): Update insert template.

2007-10-17  Neal H. Walfield  <neal@gnu.org>

	* btree.h: Don't include <stdlib.h>.

2007-07-31  Neal H. Walfield  <neal@gnu.org>

	* btree.h: Fix comment.

2007-07-30  Neal H. Walfield  <neal@gnu.org>

	* btree.h (offsetof) [! offsetof]: Define.
	(tree_init): Add prototype.
	(maybe_split_internal): Likewise.
	(find_internal): Likewise.
	(find): Likewise.
	(insert): Likewise.
	(first): Likewise.
	(next): Likewise.

2004-12-25  Neal H. Walfield  <neal@gnu.org>

	* btree.h (BTREE_CLASS): Rename from BTREE_NODE_CLASS.
	If the function returns a returns a NODE_TYPE and it fails, simply
	return NULL.
	(btree_detach): Fix comment.
	* btree-test.c: Use BTREE_CLASS, BTREE_NODE_CLASS.

2004-12-25  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am: New file.
	* headers.m4: Likewise.
	* btree.c: Likewise.
	* btree.h: Likewise.
	* btree-test.c: Likewise.
